// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Component API/Forms/FormTextarea Compact 1`] = `
<div
  dir="ltr"
>
  <textarea
    className="fd-textarea fd-textarea--compact"
    defaultValue="Compact textarea"
    onChange={[Function]}
  />
</div>
`;

exports[`Storyshots Component API/Forms/FormTextarea Dev 1`] = `
<div
  dir="ltr"
>
  <textarea
    className="fd-textarea"
    defaultValue="Default"
    disabled={false}
    onChange={[Function]}
    readOnly={false}
  />
</div>
`;

exports[`Storyshots Component API/Forms/FormTextarea Disabled 1`] = `
<div
  dir="ltr"
>
  <textarea
    className="fd-textarea"
    defaultValue="Disabled textarea"
    disabled={true}
    onChange={[Function]}
  />
</div>
`;

exports[`Storyshots Component API/Forms/FormTextarea Max Length 1`] = `
<div
  dir="ltr"
>
  <textarea
    className="fd-textarea"
    defaultValue="Max Length"
    maxLength={150}
    onChange={[Function]}
  />
  <div
    className="fd-textarea-counter"
  >
    140 characters left
  </div>
</div>
`;

exports[`Storyshots Component API/Forms/FormTextarea Primary 1`] = `
<div
  dir="ltr"
>
  <textarea
    className="fd-textarea"
    defaultValue="Placeholder"
    onChange={[Function]}
  />
</div>
`;

exports[`Storyshots Component API/Forms/FormTextarea Read Only 1`] = `
<div
  dir="ltr"
>
  <textarea
    className="fd-textarea"
    defaultValue="Placeholder"
    onChange={[Function]}
    readOnly={true}
  />
</div>
`;

exports[`Storyshots Component API/Forms/FormTextarea Validation States 1`] = `
<div
  dir="ltr"
>
  <div
    className="fr-container"
  >
    <textarea
      className="fd-textarea is-error"
      defaultValue="Error State"
      onChange={[Function]}
    />
    <textarea
      className="fd-textarea is-warning"
      defaultValue="Warning State"
      onChange={[Function]}
    />
    <textarea
      className="fd-textarea is-information"
      defaultValue="Information State"
      onChange={[Function]}
    />
    <textarea
      className="fd-textarea is-success"
      defaultValue="Success State"
      onChange={[Function]}
    />
  </div>
</div>
`;
